--- a/CaroGame/asset/language/en.txt
+++ b/CaroGame/asset/language/en.txt
@@ -1,2 +1,14 @@
 [LANGUAGE]=English
 [LANG_SELECT]=Language
+NEW_GAME_TITLE=NEW_GAME
+NEW_GAME_DESC=CREATE A NEW GAME
+LOAD_TITLE=LOAD
+LOAD_DESC=LIST OF GAMES THAT YOU HAVEN'T FINISH YET
+SETTINGS_TITLE=SETTINGS
+SETTINGS_DESC=CHANGING GAME PARAMETER VALUES 
+TUTORIAL_TITLE=TUTORIAL
+TUTORIAL_DESC=IN-GAME INSTRUCTIONS. 
+ABOUT_TITLE=ABOUT
+ABOUT_DESC=LIST OF GROUP MEMBERS AND SOURCE LINK
+ESC_TITLE=ESC
+ESC_DESC=ESC MENU
