--- a/CaroGame/asset/language/en.txt
+++ b/CaroGame/asset/language/en.txt
@@ -6,15 +6,18 @@ NEW_GAME_SHORTCUT=C
 LOAD_TITLE=LOAD
 LOAD_DESC=LIST OF GAMES THAT YOU HAVEN'T FINISH YET
 LOAD_SHORTCUT=L
+REPLAY_TITLE=REPLAY
+REPLAY_DESC=RECORD GAMEPLAY 
+REPLAY_SHORTCUT=C
 SETTINGS_TITLE=SETTINGS
 SETTINGS_DESC=CHANGING GAME PARAMETER VALUES 
-SETTINGS_SHORTCUT=
+SETTINGS_SHORTCUT=C
 TUTORIAL_TITLE=TUTORIAL
 TUTORIAL_DESC=IN-GAME INSTRUCTIONS. 
-TUTORIAL_SHORTCUT=
+TUTORIAL_SHORTCUT=H
 ABOUT_TITLE=ABOUT
 ABOUT_DESC=LIST OF GROUP MEMBERS AND SOURCE LINK
-ABOUT_SHORTCUT=
+ABOUT_SHORTCUT=T
 ESC_TITLE=ESC
-ESC_DESC=ESC MENU
-ESC_SHORTCUT=
+ESC_DESC=QUIT GAME
+ESC_SHORTCUT=E
