--- a/CaroGame/asset/language/en.txt
+++ b/CaroGame/asset/language/en.txt
@@ -7,7 +7,7 @@ LOAD_TITLE=LOAD
 LOAD_DESC=LIST OF GAMES THAT YOU HAVEN'T FINISH YET
 LOAD_SHORTCUT=L
 REPLAY_TITLE=REPLAY
-REPLAY_DESC=RECORD GAMEPLAY 
+REPLAY_DESC=FULL MATCH REPLAY
 REPLAY_SHORTCUT=C
 SETTINGS_TITLE=SETTINGS
 SETTINGS_DESC=CHANGING GAME PARAMETER VALUES 
