--- a/CaroGame/asset/language/vi.txt
+++ b/CaroGame/asset/language/vi.txt
@@ -2,22 +2,22 @@
 [LANG_SELECT]=Ngôn Ngữ
 NEW_GAME_TITLE=CHƠI MỚI
 NEW_GAME_DESC=TẠO TRÒ CHƠI MỚI
-NEW_GAME_SHORTCUT=C
+NEW_GAME_SHORTCUT=N
 LOAD_TITLE=LỊCH SỬ GAME
 LOAD_DESC=LỊCH SỬ CÁC TRÒ CHƠI CHƯA HOÀN THÀNH
 LOAD_SHORTCUT=L
 REPLAY_TITLE=CHƠI LẠI
 REPLAY_DESC=CHẠY LẠI QUÁ TRÌNH CÁC GAME ĐÃ HOÀN THÀNH
-REPLAY_SHORTCUT=C
+REPLAY_SHORTCUT=R
 SETTINGS_TITLE=CÀI ĐẶT
 SETTINGS_DESC=ĐIỀU CHỈNH CÁC THÔNG SỐ TRÒ CHƠI
-SETTINGS_SHORTCUT=C
+SETTINGS_SHORTCUT=S
 TUTORIAL_TITLE=HƯỚNG DẪN
 TUTORIAL_DESC=HƯỚNG DẪN VỀ TRÒ CHƠI
-TUTORIAL_SHORTCUT=H
+TUTORIAL_SHORTCUT=T
 ABOUT_TITLE=THÔNG TIN
 ABOUT_DESC=DANH SÁCH NHÓM VÀ SOURCE CODE LINK
-ABOUT_SHORTCUT=T
+ABOUT_SHORTCUT=A
 ESC_TITLE=THOÁT
 ESC_DESC=THOÁT KHỎI TRÒ CHƠI
-ESC_SHORTCUT=E
+ESC_SHORTCUT=ESC
