--- a/CaroGame/asset/language/vi.txt
+++ b/CaroGame/asset/language/vi.txt
@@ -18,6 +18,6 @@ TUTORIAL_SHORTCUT=T
 ABOUT_TITLE=THÔNG TIN
 ABOUT_DESC=DANH SÁCH NHÓM VÀ SOURCE CODE LINK
 ABOUT_SHORTCUT=A
-ESC_TITLE=THOÁT
-ESC_DESC=THOÁT KHỎI TRÒ CHƠI
+ESC_TITLE=ECS MENU
+ESC_DESC=ESC MENU
 ESC_SHORTCUT=ESC
