--- a/CaroGame/asset/language/vi.txt
+++ b/CaroGame/asset/language/vi.txt
@@ -1,5 +1,5 @@
-[LANGUAGE]=Tiếng Việt
-[LANG_SELECT]=Ngôn Ngữ
+[LANGUAGE]=TIẾNG VIỆT
+[LANG_SELECT]=NGÔN NGỮ
 NEW_GAME_TITLE=CHƠI MỚI
 NEW_GAME_DESC=TẠO TRÒ CHƠI MỚI
 NEW_GAME_SHORTCUT=N
