Language change + Audio change + Main Menu change

--- a/CaroGame/asset/language/vi.txt
+++ b/CaroGame/asset/language/vi.txt
@@ -2,22 +2,22 @@
 [LANG_SELECT]=NGÔN NGỮ
 NEW_GAME_TITLE=CHƠI MỚI
 NEW_GAME_DESC=TẠO TRÒ CHƠI MỚI
-NEW_GAME_SHORTCUT=N
+NEW_GAME_SHORTCUT=C
 LOAD_TITLE=LỊCH SỬ GAME
 LOAD_DESC=LỊCH SỬ CÁC TRÒ CHƠI CHƯA HOÀN THÀNH
 LOAD_SHORTCUT=L
 REPLAY_TITLE=CHƠI LẠI
 REPLAY_DESC=CHẠY LẠI QUÁ TRÌNH CÁC GAME ĐÃ HOÀN THÀNH
-REPLAY_SHORTCUT=R
+REPLAY_SHORTCUT=C
 SETTINGS_TITLE=CÀI ĐẶT
 SETTINGS_DESC=ĐIỀU CHỈNH CÁC THÔNG SỐ TRÒ CHƠI
-SETTINGS_SHORTCUT=S
+SETTINGS_SHORTCUT=C
 TUTORIAL_TITLE=HƯỚNG DẪN
 TUTORIAL_DESC=HƯỚNG DẪN VỀ TRÒ CHƠI
-TUTORIAL_SHORTCUT=T
+TUTORIAL_SHORTCUT=H
 ABOUT_TITLE=THÔNG TIN
 ABOUT_DESC=DANH SÁCH NHÓM VÀ SOURCE CODE LINK
-ABOUT_SHORTCUT=A
-ESC_TITLE=ECS
-ESC_DESC=ESC MENU
-ESC_SHORTCUT=ESC
+ABOUT_SHORTCUT=T
+EXIT_TITLE=THOÁT
+EXIT_DESC=THOÁT TRÒ CHƠI
+EXIT_SHORTCUT=T
