--- a/CaroGame/asset/language/en.txt
+++ b/CaroGame/asset/language/en.txt
@@ -1,23 +1,23 @@
-[LANGUAGE]=English
-[LANG_SELECT]=Language
-NEW_GAME_TITLE=NEW_GAME
-NEW_GAME_DESC=CREATE A NEW GAME
-NEW_GAME_SHORTCUT=C
-LOAD_TITLE=LOAD
-LOAD_DESC=LIST OF GAMES THAT YOU HAVEN'T FINISH YET
-LOAD_SHORTCUT=L
-REPLAY_TITLE=REPLAY
-REPLAY_DESC=FULL MATCH REPLAY
-REPLAY_SHORTCUT=C
-SETTINGS_TITLE=SETTINGS
-SETTINGS_DESC=CHANGING GAME PARAMETER VALUES 
-SETTINGS_SHORTCUT=C
-TUTORIAL_TITLE=TUTORIAL
-TUTORIAL_DESC=IN-GAME INSTRUCTIONS. 
-TUTORIAL_SHORTCUT=H
-ABOUT_TITLE=ABOUT
-ABOUT_DESC=LIST OF GROUP MEMBERS AND SOURCE LINK
-ABOUT_SHORTCUT=T
-ESC_TITLE=ESC
-ESC_DESC=QUIT GAME
-ESC_SHORTCUT=E
+[LANGUAGE]				=	English
+[LANG_SELECT]			=	Language
+NEW_GAME_TITLE			=	NEW_GAME
+NEW_GAME_DESC			=	CREATE A NEW GAME
+NEW_GAME_SHORTCUT		=	N
+LOAD_TITLE				=	LOAD
+LOAD_DESC				=	LIST OF GAMES THAT YOU HAVEN'T FINISH YET
+LOAD_SHORTCUT			=	L
+REPLAY_TITLE			=	REPLAY
+REPLAY_DESC				=	FULL MATCH REPLAY
+REPLAY_SHORTCUT			=	R
+SETTINGS_TITLE			=	SETTINGS
+SETTINGS_DESC			=	CHANGING GAME PARAMETER VALUES 
+SETTINGS_SHORTCUT		=	S
+TUTORIAL_TITLE			=	TUTORIAL
+TUTORIAL_DESC			=	IN-GAME INSTRUCTIONS. 
+TUTORIAL_SHORTCUT		=	T
+ABOUT_TITLE				=	ABOUT
+ABOUT_DESC				=	LIST OF GROUP MEMBERS AND SOURCE LINK
+ABOUT_SHORTCUT			=	B
+ESC_TITLE				=	QUIT
+ESC_DESC				=	QUIT GAME
+ESC_SHORTCUT			=	E
