Update Language files

--- a/CaroGame/asset/language/vi.txt
+++ b/CaroGame/asset/language/vi.txt
@@ -18,6 +18,6 @@ TUTORIAL_SHORTCUT		=	H
 ABOUT_TITLE				=	THÔNG TIN
 ABOUT_DESC				=	DANH SÁCH NHÓM VÀ SOURCE CODE LINK
 ABOUT_SHORTCUT			=	T
-ESC_TITLE				=	THOÁT
-ESC_DESC				=	THOÁT KHỎI TRÒ CHƠI
-ESC_SHORTCUT			=	O
+EXIT_TITLE				=	THOÁT
+EXIT_DESC				=	THOÁT KHỎI TRÒ CHƠI
+EXIT_SHORTCUT			=	O
