Views can now set context, made game playable.

--- a/CaroGame/asset/language/en.txt
+++ b/CaroGame/asset/language/en.txt
@@ -21,3 +21,16 @@ ABOUT_SHORTCUT			=	A
 EXIT_TITLE				=	EXIT
 EXIT_DESC				=	EXIT THE GAME
 EXIT_SHORTCUT			=	E
+OPTION_YES				=	YES
+OPTION_NO				=	NO
+OPTION_AI_EASY			=	EASY
+OPTION_AI_NORMAL		=	NORMAL
+OPTION_AI_HARD			=	HARD
+OPTION_TYPE_NORMAL		=	NORMAL
+OPTION_TYPE_RUSH		=	RUSH
+OPTION_MODE_PVP			=	PVP
+OPTION_MODE_PVE			=	PVE
+LABEL_GAME_TYPE			=	CHOOSE GAME TYPE
+LABEL_GAME_MODE			=	CHOOSE GAME MODE
+LABEL_AI_DIFFICULTY		=	CHOOSE DIFFICULTY
+LABEL_PLAY_AGAIN		=	PLAY AGAIN?
