--- a/CaroGame/asset/language/en.txt
+++ b/CaroGame/asset/language/en.txt
@@ -21,6 +21,7 @@ ABOUT_SHORTCUT			=	A
 EXIT_TITLE				=	EXIT
 EXIT_DESC				=	EXIT THE GAME
 EXIT_SHORTCUT			=	E
+
 OPTION_YES				=	YES
 OPTION_NO				=	NO
 OPTION_AI_EASY			=	EASY
@@ -34,3 +35,4 @@ LABEL_GAME_TYPE			=	CHOOSE GAME TYPE
 LABEL_GAME_MODE			=	CHOOSE GAME MODE
 LABEL_AI_DIFFICULTY		=	CHOOSE DIFFICULTY
 LABEL_PLAY_AGAIN		=	PLAY AGAIN?
+LABEL_SAVE_REPLAY		=	SAVE REPLAY?
