--- a/CaroGame/asset/language/en.txt
+++ b/CaroGame/asset/language/en.txt
@@ -36,3 +36,5 @@ LABEL_GAME_MODE			=	CHOOSE GAME MODE
 LABEL_AI_DIFFICULTY		=	CHOOSE DIFFICULTY
 LABEL_PLAY_AGAIN		=	PLAY AGAIN?
 LABEL_SAVE_REPLAY		=	SAVE REPLAY?
+LABEL_PLAYER_NAME_ONE	=	PLAYER ONE'S NAME
+LABEL_PLAYER_NAME_TWO	=	PLAYER TWO'S NAME
