--- a/CaroGame/asset/language/en.txt
+++ b/CaroGame/asset/language/en.txt
@@ -22,6 +22,14 @@ EXIT_TITLE				=	EXIT
 EXIT_DESC				=	EXIT THE GAME
 EXIT_SHORTCUT			=	E
 
+SAVE_TITLE				=	SAVE
+SAVE_DESC				=	SAVE THE CURRENT GAME
+SAVE_SHORTCUT			=	S
+
+MAIN_MENU_TITLE			=	MAIN MENU
+MAIN_MENU_DESC			=	RETURNS TO MAIN MENU
+MAIN_MENU_SHORTCUT		=	M
+
 OPTION_YES				=	YES
 OPTION_NO				=	NO
 OPTION_AI_EASY			=	EASY
@@ -31,6 +39,9 @@ OPTION_TYPE_NORMAL		=	NORMAL
 OPTION_TYPE_RUSH		=	RUSH
 OPTION_MODE_PVP			=	PVP
 OPTION_MODE_PVE			=	PVE
+OPTION_15				=	15:00
+OPTION_5				=	05:00
+OPTION_1				=	01:00
 LABEL_GAME_TYPE			=	CHOOSE GAME TYPE
 LABEL_GAME_MODE			=	CHOOSE GAME MODE
 LABEL_AI_DIFFICULTY		=	CHOOSE DIFFICULTY
@@ -38,3 +49,4 @@ LABEL_PLAY_AGAIN		=	PLAY AGAIN?
 LABEL_SAVE_REPLAY		=	SAVE REPLAY?
 LABEL_PLAYER_NAME_ONE	=	PLAYER ONE'S NAME
 LABEL_PLAYER_NAME_TWO	=	PLAYER TWO'S NAME
+LABEL_RUSH_TIME			=	CHOOSE RUSH TIME
