Updated GameState, SaveLoad, game's basic functions are done.

--- a/CaroGame/asset/language/en.txt
+++ b/CaroGame/asset/language/en.txt
@@ -30,6 +30,8 @@ MAIN_MENU_TITLE			=	MAIN MENU
 MAIN_MENU_DESC			=	RETURNS TO MAIN MENU
 MAIN_MENU_SHORTCUT		=	M
 
+BACK_TITLE				=	GO BACK
+
 OPTION_YES				=	YES
 OPTION_NO				=	NO
 OPTION_AI_EASY			=	EASY
