Added GameEndView files, added current options bar for selection views.

--- a/CaroGame/asset/language/en.txt
+++ b/CaroGame/asset/language/en.txt
@@ -52,3 +52,12 @@ LABEL_SAVE_REPLAY		=	SAVE REPLAY?
 LABEL_PLAYER_NAME_ONE	=	PLAYER ONE'S NAME
 LABEL_PLAYER_NAME_TWO	=	PLAYER TWO'S NAME
 LABEL_RUSH_TIME			=	CHOOSE RUSH TIME
+
+OPTION_NULL				=	None
+CUR_GAME_TYPE			=	Type
+CUR_GAME_MODE			=	Mode
+CUR_TIME				=	Time
+CUR_DIFFICULTY			=	Difficulty
+CUR_SCORE				=	Score
+CUR_MOVE_COUNT			=	Moves
+CUR_NAME				=	Name
