--- a/CaroGame/asset/language/en.txt
+++ b/CaroGame/asset/language/en.txt
@@ -1,54 +1,104 @@
-[LANGUAGE]				=	ENGLISH
-[LANG_SELECT]			=	LANGUAGE
-NEW_GAME_TITLE			=	NEW_GAME
-NEW_GAME_DESC			=	CREATE A NEW GAME
-NEW_GAME_SHORTCUT		=	N
-LOAD_TITLE				=	LOAD
-LOAD_DESC				=	LIST OF GAMES THAT YOU HAVEN'T FINISH YET
-LOAD_SHORTCUT			=	L
-REPLAY_TITLE			=	REPLAY
-REPLAY_DESC				=	FULL MATCH REPLAY
-REPLAY_SHORTCUT			=	R
-SETTINGS_TITLE			=	SETTINGS
-SETTINGS_DESC			=	CHANGING GAME SETTINGS
-SETTINGS_SHORTCUT		=	S
-TUTORIAL_TITLE			=	TUTORIAL
-TUTORIAL_DESC			=	IN-GAME INSTRUCTIONS. 
-TUTORIAL_SHORTCUT		=	T
-ABOUT_TITLE				=	ABOUT
-ABOUT_DESC				=	LIST OF GROUP MEMBERS AND SOURCE CODE LINK
-ABOUT_SHORTCUT			=	A
-EXIT_TITLE				=	EXIT
-EXIT_DESC				=	EXIT THE GAME
-EXIT_SHORTCUT			=	E
-
-SAVE_TITLE				=	SAVE
-SAVE_DESC				=	SAVE THE CURRENT GAME
-SAVE_SHORTCUT			=	S
-
-MAIN_MENU_TITLE			=	MAIN MENU
-MAIN_MENU_DESC			=	RETURNS TO MAIN MENU
-MAIN_MENU_SHORTCUT		=	M
-
-BACK_TITLE				=	GO BACK
-
-OPTION_YES				=	YES
-OPTION_NO				=	NO
-OPTION_AI_EASY			=	EASY
-OPTION_AI_NORMAL		=	NORMAL
-OPTION_AI_HARD			=	HARD
-OPTION_TYPE_NORMAL		=	NORMAL
-OPTION_TYPE_RUSH		=	RUSH
-OPTION_MODE_PVP			=	PVP
-OPTION_MODE_PVE			=	PVE
-OPTION_15				=	15:00
-OPTION_5				=	05:00
-OPTION_1				=	01:00
-LABEL_GAME_TYPE			=	CHOOSE GAME TYPE
-LABEL_GAME_MODE			=	CHOOSE GAME MODE
-LABEL_AI_DIFFICULTY		=	CHOOSE DIFFICULTY
-LABEL_PLAY_AGAIN		=	PLAY AGAIN?
-LABEL_SAVE_REPLAY		=	SAVE REPLAY?
-LABEL_PLAYER_NAME_ONE	=	PLAYER ONE'S NAME
-LABEL_PLAYER_NAME_TWO	=	PLAYER TWO'S NAME
-LABEL_RUSH_TIME			=	CHOOSE RUSH TIME
+[LANGUAGE]                  =    English
+[LANG_SELECT]               =    Language
+ABOUT_DESC                  =    LIST OF GROUP MEMBERS AND SOURCE CODE LINK
+ABOUT_SHORTCUT              =    A
+ABOUT_TITLE                 =    About us
+ABOUT_US_TITLE              =    About us
+APPLY_FAILED                =    Apply failed
+APPLY_KEY_TITLE             =    Apply
+APPLY_SUCCESSFULLY          =    Applied successfully
+BACK_TITLE                  =    Go back
+BG_MUSIC_TITLE              =    Background music
+DELETE_KEY_TITLE            =    Delete
+EMPTY_SAVE_DESC             =    There aren't any saves yet.
+ENABLE_MUSIC_Q              =    Enable music?
+ENABLE_SOUND_EFFECT_Q       =    Enable sound effect
+EXIT_CONFIRM_TITLE          =    Do you want to exit?
+EXIT_DESC                   =    EXIT THE GAME
+EXIT_SHORTCUT               =    E
+EXIT_TITLE                  =    Exit
+GROUP_TITLE                 =    Group
+HELP_1_TITLE                =    This is the tutorial section. You will learn how to navigate through the game and some basic game features. Hope you enjoy it! Press any key to continue.
+HELP_2_TITLE                =    The will always be some hint like this. If you don't know what to do, look for this at the bottom of the screen. It will always be there for you.
+HELP_3-1_TITLE              =    Press Back to continue.
+HELP_3_TITLE                =    Accidentally turn on the music? Here is where you can turn them off. But don't turn them off yet, these musics were very carefully chosen to make your sadness go away.
+HELP_4-1_TITLE              =    Speed up your mind with Rush mode. There are three options available: one, five and fifteen minutes.
+HELP_4-2_TITLE              =    Or just stick with the old classic normal mode we all love <3
+HELP_4_TITLE                =    This is a menu. You will interact with lots of them throughout the game. Press Up/Down or W/S to navigate through the options, or you can press the underlined character of the option to directly select that options
+HELP_5_TITLE                =    This is a text box. You can type into these. Try fill out your ✨beautiful name✨
+HELP_6-1_TITLE              =    Now pick your favorite, they won't bite
+HELP_6_TITLE                =    Surprise! We know you love these little cute creatures, so we brought them here. It takes a lot of work, but it’s definitely paying off
+HELP_7-1_TITLE              =    This is the main game screen.
+HELP_7-2_TITLE              =    The game keep a record of all the move, just in case your best friend is trying to cheat.
+HELP_7-3_TITLE              =    The game status show the time you have played in normal mode or the time passed in rush mode and the number of your won match count. The section under show your previously picked pokemon, your name and turn.
+HELP_8-1_TITLE              =    The game board is where the game happen. The last move are highligted to make it easier for you to see. You can only place your piece on an empty space in the grid.
+HELP_8-2_TITLE              =    The first player to form an unbroken line of five piece of their color will be the winner. So be careful if you opponent has a four.
+HELP_8-3_TITLE              =    Xs are red, Os are blue.
+HELP_8-4_TITLE              =    This game is great and so are you.
+HELP_8-5_TITLE              =    That is all you need to know. Enjoy the game!
+INSTRUCTOR_TITLE            =    Instructor
+LABEL_AI_DIFFICULTY         =    Choose difficulty
+LABEL_GAME_MODE             =    Choose game mode
+LABEL_GAME_TYPE             =    Choose game type
+LABEL_PLAYER_NAME_ONE       =    Player one's name
+LABEL_PLAYER_NAME_TWO       =    Player two's name
+LABEL_PLAY_AGAIN            =    Play again?
+LABEL_RUSH_TIME             =    Choose Rush time
+LABEL_SAVE_REPLAY           =    Save replay?
+LOAD_DESC                   =    LIST OF GAMES THAT YOU HAVEN'T FINISH YET
+LOAD_FAILED_TITLE           =    Load failed :(
+LOAD_MENU_TITLE             =    Saves
+LOAD_SHORTCUT               =    L
+LOAD_TITLE                  =    Load
+MAIN_MENU_DESC              =    RETURNS TO MAIN MENU
+MAIN_MENU_SHORTCUT          =    M
+MAIN_MENU_TITLE             =    Main menu
+NAMING_FIELD_TITLE          =    Name
+NAVIGATE_BACK_KEY_SHORTCUT  =    b
+NAVIGATE_BACK_KEY_TITLE     =    Go back
+NAVIGATION_KEYS_TITLE       =    Move
+NEW_GAME_DESC               =    CREATE A NEW GAME
+NEW_GAME_SHORTCUT           =    N
+NEW_GAME_TITLE              =    New game
+NO_TITLE                    =    No
+OFF_TITLE                   =    Disable
+ON_TITLE                    =    Enable
+OPEN_SOURCE_CODE_LINK_TITLE =    Open link
+OPTION_1                    =    01:00
+OPTION_15                   =    15:00
+OPTION_5                    =    05:00
+OPTION_AI_EASY              =    Easy
+OPTION_AI_HARD              =    Hard
+OPTION_AI_NORMAL            =    Normal
+OPTION_MODE_PVE             =    PvE
+OPTION_MODE_PVP             =    PvP
+OPTION_NO                   =    No
+OPTION_TYPE_NORMAL          =    Normal
+OPTION_TYPE_RUSH            =    Rush
+OPTION_YES                  =    Yes
+OVERWRITE_NOTICE_TITLE      =    Do you want to overwrite that file?
+REPLAY_DESC                 =    FULL MATCH REPLAY
+REPLAY_LOAD_MENU_TITLE      =    Replays
+REPLAY_SAVE_MENU_TITLE      =    Replays
+REPLAY_SHORTCUT             =    R
+REPLAY_TITLE                =    Replay
+SAVE_DESC                   =    SAVE THE CURRENT GAME
+SAVE_FAILED_TITLE           =    Save failed :(
+SAVE_MENU_TITLE             =    Saves
+SAVE_SHORTCUT               =    S
+SAVE_SUCCESS_TITLE          =    Saved successfully
+SAVE_TITLE                  =    Save
+SEARCH_KEY_TITLE            =    Search
+SELECT_AVATAR_TITLE         =    Choose your avatar
+SELECT_KEY_TITLE            =    Select
+SETTINGS_DESC               =    CHANGING GAME SETTINGS
+SETTINGS_SHORTCUT           =    S
+SETTINGS_TITLE              =    Settings
+SOUND_EFFECT_TITLE          =    Sound effect
+STRING_INPUT_DONE_LABEL     =    Done
+TUTORIAL_DESC               =    IN-GAME INSTRUCTIONS.
+TUTORIAL_Q                  =    Do you want a quick tutorial?
+TUTORIAL_SHORTCUT           =    T
+TUTORIAL_TITLE              =    Tutorial
+UNDO_OPTION_TITLE           =    Undo
+YES_TITLE                   =    Yes
