Fixed some silly bugs. Update version

--- a/CaroGame/asset/language/en.txt
+++ b/CaroGame/asset/language/en.txt
@@ -9,6 +9,13 @@ APPLY_KEY_TITLE             =    Apply
 APPLY_SUCCESSFULLY          =    Applied successfully
 BACK_TITLE                  =    Go back
 BG_MUSIC_TITLE              =    Background music
+CUR_DIFFICULTY              =    Difficulty
+CUR_GAME_MODE               =    Mode
+CUR_GAME_TYPE               =    Type
+CUR_MOVE_COUNT              =    Moves
+CUR_NAME                    =    Name
+CUR_SCORE                   =    Score
+CUR_TIME                    =    Time
 DELETE_KEY_TITLE            =    Delete
 EMPTY_SAVE_DESC             =    There aren't any saves yet.
 ENABLE_MUSIC_Q              =    Enable music?
@@ -53,6 +60,7 @@ LOAD_TITLE                  =    Load
 MAIN_MENU_DESC              =    RETURNS TO MAIN MENU
 MAIN_MENU_SHORTCUT          =    M
 MAIN_MENU_TITLE             =    Main menu
+MAX_NAME_LENGTH_NOTICE      =    User name must be less than
 NAMING_FIELD_TITLE          =    Name
 NAVIGATE_BACK_KEY_SHORTCUT  =    b
 NAVIGATE_BACK_KEY_TITLE     =    Go back
@@ -73,6 +81,7 @@ OPTION_AI_NORMAL            =    Normal
 OPTION_MODE_PVE             =    PvE
 OPTION_MODE_PVP             =    PvP
 OPTION_NO                   =    No
+OPTION_NULL                 =    None
 OPTION_TYPE_NORMAL          =    Normal
 OPTION_TYPE_RUSH            =    Rush
 OPTION_YES                  =    Yes
