--- a/CaroGame/asset/language/en.txt
+++ b/CaroGame/asset/language/en.txt
@@ -113,3 +113,7 @@ UNDO_OPTION_TITLE           =    Undo
 YES_TITLE                   =    Yes
 TIME_OUT					=	 Over!
 SPACE_KEY_CONTINUE			=    Press SPACE to continue...
+ANY_KEY_CONTINUE			=		Press any key to continue...
+PLAYER_TIME					=	 Player's time
+PAUSE_SHORTCUT				=	ESC
+PAUSE_TITLE					=	Pause
