--- a/CaroGame/asset/language/en.txt
+++ b/CaroGame/asset/language/en.txt
@@ -17,7 +17,7 @@ CUR_NAME                    =    Name
 CUR_SCORE                   =    Score
 CUR_TIME                    =    Time
 DELETE_KEY_TITLE            =    Delete
-EMPTY_SAVE_DESC             =    There haven't been any saves yet.
+EMPTY_SAVE_DESC             =    There aren't any saves.
 ENABLE_MUSIC_Q              =    Enable music?
 ENABLE_SOUND_EFFECT_Q       =    Enable sound effect
 EXIT_CONFIRM_TITLE          =    Do you want to exit?
