--- a/CaroGame/asset/language/vi.txt
+++ b/CaroGame/asset/language/vi.txt
@@ -1,7 +1,7 @@
 [LANGUAGE]                  =    Tiếng Việt
 [LANG_SELECT]               =    Ngôn Ngữ
-ABOUT_DESC                  =    Danh sách nhóm và liên kết mã nguồn
-ABOUT_SHORTCUT              =    A
+ABOUT_DESC                  =    Danh sách nhóm và link mã nguồn
+ABOUT_SHORTCUT              =    n
 ABOUT_TITLE                 =    Thông tin
 ABOUT_US_TITLE              =    Thông tin
 APPLY_FAILED                =    Áp dụng không thành công
@@ -22,7 +22,7 @@ ENABLE_MUSIC_Q              =    Cho phép bật nhạc?
 ENABLE_SOUND_EFFECT_Q       =    Cho phép bật hiệu ứng âm thanh?	
 EXIT_CONFIRM_TITLE          =    Bạn có muốn thoát khỏi trò chơi?
 EXIT_DESC                   =    Thoát khỏi trò chơi
-EXIT_SHORTCUT               =    E
+EXIT_SHORTCUT               =    o
 EXIT_TITLE                  =    Thoát
 GROUP_TITLE                 =    Nhóm
 HELP_1_TITLE                =    Đây là phần hướng dẫn. Bạn sẽ học cách điều hướng trong trò chơi và một số tính năng cơ bản của trò chơi. Hy vọng la bạn sẽ thich nó! Bấm phím bất kỳ để tiếp tục.
@@ -62,15 +62,15 @@ MAIN_MENU_SHORTCUT          =    M
 MAIN_MENU_TITLE             =    Menu chính
 MAX_NAME_LENGTH_NOTICE      =    Tên người dùng phải ít hơn
 NAMING_FIELD_TITLE          =    Tên
-NAVIGATE_BACK_KEY_SHORTCUT  =    b
+NAVIGATE_BACK_KEY_SHORTCUT  =    Q
 NAVIGATE_BACK_KEY_TITLE     =    Quay lại
 NAVIGATION_KEYS_TITLE       =    Nước đi
 NEW_GAME_DESC               =    Tạo trò chơi mới
-NEW_GAME_SHORTCUT           =    N
+NEW_GAME_SHORTCUT           =    T
 NEW_GAME_TITLE              =    Trò chơi mới
 NO_TITLE                    =    Cho phép
-OFF_TITLE                   =    Vô hiệu hóa
-ON_TITLE                    =    
+OFF_TITLE                   =    Tắt
+ON_TITLE                    =    Bật
 OPEN_SOURCE_CODE_LINK_TITLE =    Mở link
 OPTION_1                    =    01:00
 OPTION_15                   =    15:00
@@ -82,32 +82,32 @@ OPTION_MODE_PVE             =    PvE
 OPTION_MODE_PVP             =    PvP
 OPTION_NO                   =    Không
 OPTION_NULL                 =    Không có
-OPTION_TYPE_NORMAL          =    Bình thường
-OPTION_TYPE_RUSH            =    Tính thời gian
+OPTION_TYPE_NORMAL          =    Thường
+OPTION_TYPE_RUSH            =    Rush
 OPTION_YES                  =    Có
 OVERWRITE_NOTICE_TITLE      =    Bạn có muốn ghi đè lên tập tin này?
 REPLAY_DESC                 =    Phát lại toàn bộ trận đấu
 REPLAY_LOAD_MENU_TITLE      =    Phát lại
 REPLAY_SAVE_MENU_TITLE      =    Phát lại
-REPLAY_SHORTCUT             =    R
+REPLAY_SHORTCUT             =    P
 REPLAY_TITLE                =    Phát lại
 SAVE_DESC                   =    Lưu trò chơi hiện tại
 SAVE_FAILED_TITLE           =    Lưu thất bại :(
 SAVE_MENU_TITLE             =    Lưu
-SAVE_SHORTCUT               =    S
+SAVE_SHORTCUT               =    L
 SAVE_SUCCESS_TITLE          =    Lưu thành công
 SAVE_TITLE                  =    Lưu
 SEARCH_KEY_TITLE            =    Tìm
 SELECT_AVATAR_TITLE         =    Lựa chọn hình đại diện của bạn
 SELECT_KEY_TITLE            =    Lựa chọn
 SETTINGS_DESC               =    Thay đổi cài đặt game
-SETTINGS_SHORTCUT           =    S
+SETTINGS_SHORTCUT           =    C
 SETTINGS_TITLE              =    Cài đặt
 SOUND_EFFECT_TITLE          =    Hiệu ứng ấm thanh
 STRING_INPUT_DONE_LABEL     =    Hoàn thành
 TUTORIAL_DESC               =    Hướng dẫn chơi.
 TUTORIAL_Q                  =    Bạn có muốn một hướng dẫn nhanh
-TUTORIAL_SHORTCUT           =    T
+TUTORIAL_SHORTCUT           =    H
 TUTORIAL_TITLE              =    Hướng dẫn
 UNDO_OPTION_TITLE           =    Hoàn tác
 YES_TITLE                   =    Có
