--- a/CaroGame/asset/language/vi.txt
+++ b/CaroGame/asset/language/vi.txt
@@ -25,7 +25,7 @@ EXIT_DESC                   =    Thoát khỏi trò chơi
 EXIT_SHORTCUT               =    o
 EXIT_TITLE                  =    Thoát
 GROUP_TITLE                 =    Nhóm
-HELP_1_TITLE                =    Đây là phần hướng dẫn. Bạn sẽ học cách điều hướng trong trò chơi và một số tính năng cơ bản của trò chơi. Hy vọng la bạn sẽ thich nó! Bấm phím bất kỳ để tiếp tục.
+HELP_1_TITLE                =    Đây là phần hướng dẫn. Bạn sẽ học cách điều hướng trong trò chơi và một số tính năng cơ bản của trò chơi. Hy vọng la bạn sẽ th nó! Bấm phím bất kỳ để tiếp tục.
 HELP_2_TITLE                =    Sẽ luôn luôn là một số gợi ý như thế này. Nếu bạn không biết phải làm gì, hãy tìm mục này ở cuối màn hình. Nó sẽ luôn ở đó cho bạn.
 HELP_3-1_TITLE              =    Ấn Quay lại để tiếp tục
 HELP_3_TITLE                =    Vô tình bật nhạc? Đây là nơi bạn có thể tắt chúng đi. Nhưng đừng tắt chúng đi, những bản nhạc này đã được lựa chọn rất cẩn thận để giúp bạn vơi đi nỗi buồn.
@@ -103,7 +103,7 @@ SELECT_KEY_TITLE            =    Lựa chọn
 SETTINGS_DESC               =    Thay đổi cài đặt game
 SETTINGS_SHORTCUT           =    C
 SETTINGS_TITLE              =    Cài đặt
-SOUND_EFFECT_TITLE          =    Hiệu ứng ấm thanh
+SOUND_EFFECT_TITLE          =    Hiệu ứng âm thanh
 STRING_INPUT_DONE_LABEL     =    Hoàn thành
 TUTORIAL_DESC               =    Hướng dẫn chơi.
 TUTORIAL_Q                  =    Bạn có muốn một hướng dẫn nhanh
