--- a/CaroGame/asset/language/vi.txt
+++ b/CaroGame/asset/language/vi.txt
@@ -25,7 +25,7 @@ EXIT_DESC                   =    Thoát khỏi trò chơi
 EXIT_SHORTCUT               =    o
 EXIT_TITLE                  =    Thoát
 GROUP_TITLE                 =    Nhóm
-HELP_1_TITLE                =    Đây là phần hướng dẫn. Bạn sẽ học cách điều hướng trong trò chơi và một số tính năng cơ bản của trò chơi. Hy vọng la bạn sẽ th nó! Bấm phím bất kỳ để tiếp tục.
+HELP_1_TITLE                =    Đây là phần hướng dẫn. Bạn sẽ học cách điều hướng trong trò chơi và một số tính năng cơ bản của trò chơi. Hy vọng là bạn sẽ ththíchích nó! Bấm phím bất kỳ để tiếp tục.
 HELP_2_TITLE                =    Sẽ luôn luôn là một số gợi ý như thế này. Nếu bạn không biết phải làm gì, hãy tìm mục này ở cuối màn hình. Nó sẽ luôn ở đó cho bạn.
 HELP_3-1_TITLE              =    Ấn Quay lại để tiếp tục
 HELP_3_TITLE                =    Vô tình bật nhạc? Đây là nơi bạn có thể tắt chúng đi. Nhưng đừng tắt chúng đi, những bản nhạc này đã được lựa chọn rất cẩn thận để giúp bạn vơi đi nỗi buồn.
@@ -33,7 +33,7 @@ HELP_4-1_TITLE              =    Tăng tốc trí óc của bạn với chế đ
 HELP_4-2_TITLE              =    Hoặc chỉ gắn bó với chế độ bình thường cổ điển cũ mà tất cả chúng ta đều yêu thích <3
 HELP_4_TITLE                =    Đây là menu. Bạn sẽ tương tác với rất nhiều thứ trong số đó trong suốt trò chơi. Nhấn Lên/Xuống hoặc W/S để điều hướng qua các tùy chọn hoặc bạn có thể nhấn ký tự gạch chân của tùy chọn để chọn trực tiếp các tùy chọn đó
 HELP_5_TITLE                =    Đây là một hộp văn bản. Bạn có thể gõ vào đó. Hãy thử điền vào ✨tên đẹp✨ của bạn
-HELP_6-1_TITLE              =    Bây giờ chọn sở thích của bạn, Chúng sẽ không cắn đâu.
+HELP_6-1_TITLE              =    Bây giờ chọn pokemon yêu thích của bạn, Chúng sẽ không cắn đâu.
 HELP_6_TITLE                =    Bất ngờ chưa! Chúng tôi biết bạn yêu thích những sinh vật nhỏ dễ thương này, vì vậy chúng tôi đã mang chúng đến đây. Phải mất rất nhiều công sức, nhưng nó chắc chắn được đền đáp
 HELP_7-1_TITLE              =    Đây là màn hình chính của trò chơi
 HELP_7-2_TITLE              =    Trò chơi giữ lại bản ghi của tất cả các nước đi, chỉ trong trường hợp bạn thân của bạn đang cố gian lận
