Fix some more typo

--- a/CaroGame/asset/language/vi.txt
+++ b/CaroGame/asset/language/vi.txt
@@ -4,6 +4,7 @@ ABOUT_DESC                  =    Danh sách nhóm và link mã nguồn
 ABOUT_SHORTCUT              =    n
 ABOUT_TITLE                 =    Thông tin
 ABOUT_US_TITLE              =    Thông tin
+ANY_KEY_CONTINUE            =    Nhấn nút bất kì để tiếp tục...
 APPLY_FAILED                =    Áp dụng không thành công
 APPLY_KEY_TITLE             =    Áp dụng
 APPLY_SUCCESSFULLY          =    Áp dụng thành công
@@ -19,7 +20,7 @@ CUR_TIME                    =    Thời gian
 DELETE_KEY_TITLE            =    Xóa
 EMPTY_SAVE_DESC             =    Chưa có bất kỳ bản lưu nào
 ENABLE_MUSIC_Q              =    Cho phép bật nhạc?
-ENABLE_SOUND_EFFECT_Q       =    Cho phép bật hiệu ứng âm thanh?	
+ENABLE_SOUND_EFFECT_Q       =    Cho phép bật hiệu ứng âm thanh?
 EXIT_CONFIRM_TITLE          =    Bạn có muốn thoát khỏi trò chơi?
 EXIT_DESC                   =    Thoát khỏi trò chơi
 EXIT_SHORTCUT               =    o
@@ -28,25 +29,25 @@ GROUP_TITLE                 =    Nhóm
 HELP_1_TITLE                =    Đây là phần hướng dẫn. Bạn sẽ học cách điều hướng trong trò chơi và một số tính năng cơ bản của trò chơi. Hy vọng la bạn sẽ thich nó! Bấm phím bất kỳ để tiếp tục.
 HELP_2_TITLE                =    Sẽ luôn luôn là một số gợi ý như thế này. Nếu bạn không biết phải làm gì, hãy tìm mục này ở cuối màn hình. Nó sẽ luôn ở đó cho bạn.
 HELP_3-1_TITLE              =    Ấn Quay lại để tiếp tục
-HELP_3_TITLE                =    Vô tình bật nhạc? Đây là nơi bạn có thể tắt chúng đi. Nhưng đừng tắt chúng đi, những bản nhạc này đã được lựa chọn rất cẩn thận để giúp bạn vơi đi nỗi buồn.
+HELP_3_TITLE                =    Vô tình bật nhạc? Đây là nơi bạn có thể tắt chúng đi. Nhưng đừng vội, những bản nhạc này đã được lựa chọn rất cẩn thận để giúp bạn vơi đi nỗi buồn.
 HELP_4-1_TITLE              =    Tăng tốc trí óc của bạn với chế độ tính thời gian. Có ba tùy chọn có sẵn: 1, 5 và 15 phút.
 HELP_4-2_TITLE              =    Hoặc chỉ gắn bó với chế độ bình thường cổ điển cũ mà tất cả chúng ta đều yêu thích <3
 HELP_4_TITLE                =    Đây là menu. Bạn sẽ tương tác với rất nhiều thứ trong số đó trong suốt trò chơi. Nhấn Lên/Xuống hoặc W/S để điều hướng qua các tùy chọn hoặc bạn có thể nhấn ký tự gạch chân của tùy chọn để chọn trực tiếp các tùy chọn đó
-HELP_5_TITLE                =    Đây là một hộp văn bản. Bạn có thể gõ vào đó. Hãy thử điền vào ✨tên đẹp✨ của bạn
+HELP_5_TITLE                =    Đây là một hộp văn bản. Bạn có thể gõ vào đó. Hãy thử điền vào ✨tên đẹp đẽ✨ của bạn
 HELP_6-1_TITLE              =    Bây giờ chọn sở thích của bạn, Chúng sẽ không cắn đâu.
-HELP_6_TITLE                =    Bất ngờ chưa! Chúng tôi biết bạn yêu thích những sinh vật nhỏ dễ thương này, vì vậy chúng tôi đã mang chúng đến đây. Phải mất rất nhiều công sức, nhưng nó chắc chắn được đền đáp
+HELP_6_TITLE                =    Bất ngờ chưa! Chúng tôi biết bạn yêu thích những sinh vật nhỏ dễ thương này, nên chúng tôi đã mang chúng đến. Tốn sức lắm nha
 HELP_7-1_TITLE              =    Đây là màn hình chính của trò chơi
-HELP_7-2_TITLE              =    Trò chơi giữ lại bản ghi của tất cả các nước đi, chỉ trong trường hợp bạn thân của bạn đang cố gian lận
+HELP_7-2_TITLE              =    Trò chơi ghi lại các nước đi, trong trường hợp bạn thân của bạn đang cố gian lận
 HELP_7-3_TITLE              =    Trạng thái trò chơi hiển thị thời gian bạn đã chơi ở chế độ bình thường hoặc thời gian đã trôi qua ở chế độ tính thời gian và số lượng trận thắng của bạn. Phần bên dưới hiển thị pokemon đã chọn trước đó của bạn, tên và lượt của bạn.
 HELP_8-1_TITLE              =    Bàn cờ là nơi trò chơi diễn ra. Nước đi cuối cùng được làm nổi bật để làm bạn dễ nhìn thấy. Bạn chỉ có thể quân cờ của mình vào một khoảng trống trong khung lưới của bàn cờ.
-HELP_8-2_TITLE              =    Người chơi thứ nhất đánh dấu tạo thành một dòng không bị gián đoạn gồm 5 quân cờ cùng màu của họ sẽ là người thắng cuộc. Vì vậy hãy cẩn thận nếu đối thủ của bạn đánh dấu 
-HELP_8-3_TITLE              =    X là màu đỏ, O là màu xanh.
-HELP_8-4_TITLE              =    Trò chơi thật tuyệt vời và bạn cũng thế
+HELP_8-2_TITLE              =    Người chơi đầu tiên tạo được một đường không bị gián đoạn gồm 5 quân cờ cùng màu của họ sẽ là người thắng cuộc. Vì vậy hãy cẩn thận nếu đối thủ của bạn đánh dấu
+HELP_8-3_TITLE              =    Xs thì màu đỏ, Os thì màu xanh.
+HELP_8-4_TITLE              =    Trò chơi này rất tuyệt và bạn cũng thế
 HELP_8-5_TITLE              =    Đó là tất cả những điều mà bạn cần biết. Hãy tận hưởng trò chơi!
 INSTRUCTOR_TITLE            =    Giảng viên hướng dẫn
 LABEL_AI_DIFFICULTY         =    Chọn độ khó
-LABEL_GAME_MODE             =    Chọn chế độ trò chơi
-LABEL_GAME_TYPE             =    Chọn loại trò chơi 
+LABEL_GAME_MODE             =    Chọn chế độ chơi
+LABEL_GAME_TYPE             =    Chọn loại trò chơi
 LABEL_PLAYER_NAME_ONE       =    Tên người chơi 1
 LABEL_PLAYER_NAME_TWO       =    Tên người chơi 2
 LABEL_PLAY_AGAIN            =    Chơi lại?
@@ -64,11 +65,11 @@ MAX_NAME_LENGTH_NOTICE      =    Tên người dùng phải ít hơn
 NAMING_FIELD_TITLE          =    Tên
 NAVIGATE_BACK_KEY_SHORTCUT  =    Q
 NAVIGATE_BACK_KEY_TITLE     =    Quay lại
-NAVIGATION_KEYS_TITLE       =    Nước đi
+NAVIGATION_KEYS_TITLE       =    Di chuyển
 NEW_GAME_DESC               =    Tạo trò chơi mới
 NEW_GAME_SHORTCUT           =    T
 NEW_GAME_TITLE              =    Trò chơi mới
-NO_TITLE                    =    Cho phép
+NO_TITLE                    =    Không
 OFF_TITLE                   =    Tắt
 ON_TITLE                    =    Bật
 OPEN_SOURCE_CODE_LINK_TITLE =    Mở link
@@ -86,6 +87,9 @@ OPTION_TYPE_NORMAL          =    Thường
 OPTION_TYPE_RUSH            =    Rush
 OPTION_YES                  =    Có
 OVERWRITE_NOTICE_TITLE      =    Bạn có muốn ghi đè lên tập tin này?
+PAUSE_SHORTCUT              =    ESC
+PAUSE_TITLE                 =    Tạm dừng
+PLAYER_TIME                 =    Thời gian
 REPLAY_DESC                 =    Phát lại toàn bộ trận đấu
 REPLAY_LOAD_MENU_TITLE      =    Phát lại
 REPLAY_SAVE_MENU_TITLE      =    Phát lại
@@ -103,10 +107,12 @@ SELECT_KEY_TITLE            =    Lựa chọn
 SETTINGS_DESC               =    Thay đổi cài đặt game
 SETTINGS_SHORTCUT           =    C
 SETTINGS_TITLE              =    Cài đặt
-SOUND_EFFECT_TITLE          =    Hiệu ứng ấm thanh
+SOUND_EFFECT_TITLE          =    Hiệu ứng âm thanh
+SPACE_KEY_CONTINUE          =    Nhấn cách để tiếp tục...
 STRING_INPUT_DONE_LABEL     =    Hoàn thành
+TIME_OUT                    =    Xong!
 TUTORIAL_DESC               =    Hướng dẫn chơi.
-TUTORIAL_Q                  =    Bạn có muốn một hướng dẫn nhanh
+TUTORIAL_Q                  =    Hướng dẫn?
 TUTORIAL_SHORTCUT           =    H
 TUTORIAL_TITLE              =    Hướng dẫn
 UNDO_OPTION_TITLE           =    Hoàn tác
