--- a/CaroGame/asset/language/vi.txt
+++ b/CaroGame/asset/language/vi.txt
@@ -33,11 +33,11 @@ HELP_4-1_TITLE              =    Tăng tốc trí óc của bạn với chế đ
 HELP_4-2_TITLE              =    Hoặc chỉ gắn bó với chế độ bình thường cổ điển cũ mà tất cả chúng ta đều yêu thích <3
 HELP_4_TITLE                =    Đây là menu. Bạn sẽ tương tác với rất nhiều thứ trong số đó trong suốt trò chơi. Nhấn Lên/Xuống hoặc W/S để điều hướng qua các tùy chọn hoặc bạn có thể nhấn ký tự gạch chân của tùy chọn để chọn trực tiếp các tùy chọn đó
 HELP_5_TITLE                =    Đây là một hộp văn bản. Bạn có thể gõ vào đó. Hãy thử điền vào ✨tên đẹp✨ của bạn
-HELP_6-1_TITLE              =    Bây giờ chọn sở thích của bạn, Chúng sẽ không cắn đâu.
-HELP_6_TITLE                =    Bất ngờ chưa! Chúng tôi biết bạn yêu thích những sinh vật nhỏ dễ thương này, vì vậy chúng tôi đã mang chúng đến đây. Phải mất rất nhiều công sức, nhưng nó chắc chắn được đền đáp
+HELP_6-1_TITLE              =    Hãy chọn con mà bạn thích, chúng sẽ không cắn đâu.
+HELP_6_TITLE                =    Bất ngờ chưa! Chúng tôi biết bạn yêu thích những sinh vật nhỏ dễ thương này, nên chúng tôi đã mang chúng đến.
 HELP_7-1_TITLE              =    Đây là màn hình chính của trò chơi
-HELP_7-2_TITLE              =    Trò chơi giữ lại bản ghi của tất cả các nước đi, chỉ trong trường hợp bạn thân của bạn đang cố gian lận
-HELP_7-3_TITLE              =    Trạng thái trò chơi hiển thị thời gian bạn đã chơi ở chế độ bình thường hoặc thời gian đã trôi qua ở chế độ tính thời gian và số lượng trận thắng của bạn. Phần bên dưới hiển thị pokemon đã chọn trước đó của bạn, tên và lượt của bạn.
+HELP_7-2_TITLE              =    Trò chơi giữ lại lịch sử các nước đi, chỉ trong trường hợp bạn thân của bạn đang cố gian lận
+HELP_7-3_TITLE              =    Trạng thái trò chơi hiển thị thời gian bạn đã chơi ở chế độ bình thường hoặc thời gian đã trôi qua ở chế độ tính thời gian và số lượng trận thắng của bạn. Phần bên dưới hiển thị pokemon đã chọn trước đó của bạn, tên và lượt.
 HELP_8-1_TITLE              =    Bàn cờ là nơi trò chơi diễn ra. Nước đi cuối cùng được làm nổi bật để làm bạn dễ nhìn thấy. Bạn chỉ có thể quân cờ của mình vào một khoảng trống trong khung lưới của bàn cờ.
 HELP_8-2_TITLE              =    Người chơi thứ nhất đánh dấu tạo thành một dòng không bị gián đoạn gồm 5 quân cờ cùng màu của họ sẽ là người thắng cuộc. Vì vậy hãy cẩn thận nếu đối thủ của bạn đánh dấu 
 HELP_8-3_TITLE              =    X là màu đỏ, O là màu xanh.
