Finished game end view.

--- a/CaroGame/asset/language/en.txt
+++ b/CaroGame/asset/language/en.txt
@@ -109,11 +109,15 @@ TUTORIAL_DESC               =    IN-GAME INSTRUCTIONS.
 TUTORIAL_Q                  =    Do you want a quick tutorial?
 TUTORIAL_SHORTCUT           =    T
 TUTORIAL_TITLE              =    Tutorial
+UNDO_SHORTCUT				=	 Z
 UNDO_OPTION_TITLE           =    Undo
 YES_TITLE                   =    Yes
 TIME_OUT					=	 Over!
 SPACE_KEY_CONTINUE			=    Press SPACE to continue...
-ANY_KEY_CONTINUE			=		Press any key to continue...
+ANY_KEY_CONTINUE			=	 Press any key to continue...
 PLAYER_TIME					=	 Player's time
 PAUSE_SHORTCUT				=	ESC
 PAUSE_TITLE					=	Pause
+MOVE_SHORTCUT				=	W, A, S, D
+PLACE_SHORTCUT				=	Enter
+PLACE_TITLE					=	Make move
