--- a/CaroGame/asset/language/vi.txt
+++ b/CaroGame/asset/language/vi.txt
@@ -26,7 +26,7 @@ EXIT_DESC                   =    Thoát khỏi trò chơi
 EXIT_SHORTCUT               =    o
 EXIT_TITLE                  =    Thoát
 GROUP_TITLE                 =    Nhóm
-HELP_1_TITLE                =    Đây là phần hướng dẫn. Bạn sẽ học cách điều hướng trong trò chơi và một số tính năng cơ bản của trò chơi. Hy vọng là bạn sẽ ththíchích nó! Bấm phím bất kỳ để tiếp tục.
+HELP_1_TITLE                =    Đây là phần hướng dẫn. Bạn sẽ học cách điều hướng trong trò chơi và một số tính năng cơ bản của trò chơi. Hy vọng là bạn sẽ thích nó! Bấm phím bất kỳ để tiếp tục.
 HELP_2_TITLE                =    Sẽ luôn luôn là một số gợi ý như thế này. Nếu bạn không biết phải làm gì, hãy tìm mục này ở cuối màn hình. Nó sẽ luôn ở đó cho bạn.
 HELP_3-1_TITLE              =    Ấn Quay lại để tiếp tục
 HELP_3_TITLE                =    Vô tình bật nhạc? Đây là nơi bạn có thể tắt chúng đi. Nhưng đừng vội, những bản nhạc này đã được lựa chọn rất cẩn thận để giúp bạn vơi đi nỗi buồn.
@@ -102,6 +102,7 @@ SAVE_SHORTCUT               =    L
 SAVE_SUCCESS_TITLE          =    Lưu thành công
 SAVE_TITLE                  =    Lưu
 SEARCH_KEY_TITLE            =    Tìm
+SEARCH_FIELD_TITLE            =    Tìm
 SELECT_AVATAR_TITLE         =    Lựa chọn hình đại diện của bạn
 SELECT_KEY_TITLE            =    Lựa chọn
 SETTINGS_DESC               =    Thay đổi cài đặt game
