Updated language files.

--- a/CaroGame/asset/language/en.txt
+++ b/CaroGame/asset/language/en.txt
@@ -5,6 +5,7 @@ ABOUT_SHORTCUT              =    A
 ABOUT_TITLE                 =    About us
 ABOUT_US_TITLE              =    About us
 ANY_KEY_CONTINUE            =    Press any key to continue...
+ANY_KEY_CONTINUE            =    Press any key to continue...
 APPLY_FAILED                =    Apply failed
 APPLY_KEY_TITLE             =    Apply
 APPLY_SUCCESSFULLY          =    Applied successfully
@@ -27,23 +28,23 @@ EXIT_SHORTCUT               =    E
 EXIT_TITLE                  =    Exit
 GROUP_TITLE                 =    Group
 HELP_1_TITLE                =    This is the tutorial section. You will learn how to navigate through the game and some basic game features. Hope you enjoy it! Press any key to continue.
-HELP_2_TITLE                =    The will always be some hint like this. If you don't know what to do, look for this at the bottom of the screen. It will always be there for you.
+HELP_2_TITLE                =    There will always be hints like these. If you don't know what to do, look for these at the bottom of the screen. They will always be there for you.
 HELP_3-1_TITLE              =    Press Back to continue.
-HELP_3_TITLE                =    Accidentally turn on the music? Here is where you can turn them off. But don't turn them off yet, these musics were very carefully chosen to make your sadness go away.
+HELP_3_TITLE                =    Accidentally turned on the music? Here is where you can turn it off. But don't turn it off yet, these tracks were very carefully chosen to make your improve your playing experience.
 HELP_4-1_TITLE              =    Speed up your mind with Rush mode. There are three options available: one, five and fifteen minutes.
 HELP_4-2_TITLE              =    Or just stick with the old classic normal mode we all love <3
-HELP_4_TITLE                =    This is a menu. You will interact with lots of them throughout the game. Press Up/Down or W/S to navigate through the options, or you can press the underlined character of the option to directly select that options
-HELP_5_TITLE                =    This is a text box. You can type into these. Try fill out your ✨beautiful name✨
+HELP_4_TITLE                =    This is a menu. You will interact with lots of them throughout the game. Press Up/Down or W/S to navigate through the options, or you can press the underlined character of an option to directly select that option
+HELP_5_TITLE                =    This is a text box. You can type into these. Try filling out your ✨beautiful name✨
 HELP_6-1_TITLE              =    Now pick your favorite, they won't bite
-HELP_6_TITLE                =    Surprise! We know you love these little cute creatures, so we brought them here. It takes a lot of work, but it’s definitely paying off
+HELP_6_TITLE                =    Surprise! We know you love these little cute creatures, so we brought them here. It took a lot of work, but it’s definitely paying off
 HELP_7-1_TITLE              =    This is the main game screen.
-HELP_7-2_TITLE              =    The game keep a record of all the move, just in case your best friend is trying to cheat.
-HELP_7-3_TITLE              =    The game status show the time you have played in normal mode or the time passed in rush mode and the number of your won match count. The section under show your previously picked pokemon, your name and turn.
-HELP_8-1_TITLE              =    The game board is where the game happen. The last move are highligted to make it easier for you to see. You can only place your piece on an empty space in the grid.
+HELP_7-2_TITLE              =    The game keeps a record of all the moves, just in case your best friend is trying to cheat.
+HELP_7-3_TITLE              =    The game status bar shows how much time has passed for each player played in Normal mode, or how much time each player has left in Rush mode. It also shows the numbers of wins, since the first match, respective to each player. Moreover, the containers below the status bar show the avatars the players have picked, as well as the the players' username and the current player's turn.
+HELP_8-1_TITLE              =    The game board is where the actual game takes place. The last move is highligted to make it easier for you to see. You can only place your piece on an empty space in the grid.
 HELP_8-2_TITLE              =    The first player to form an unbroken line of five piece of their color will be the winner. So be careful if you opponent has a four.
 HELP_8-3_TITLE              =    Xs are red, Os are blue.
 HELP_8-4_TITLE              =    This game is great and so are you.
-HELP_8-5_TITLE              =    That is all you need to know. Enjoy the game!
+HELP_8-5_TITLE              =    That is all you need to know. Now let's get the game started!
 INSTRUCTOR_TITLE            =    Instructor
 LABEL_AI_DIFFICULTY         =    Choose difficulty
 LABEL_GAME_MODE             =    Choose game mode
@@ -53,7 +54,7 @@ LABEL_PLAYER_NAME_TWO       =    Player two's name
 LABEL_PLAY_AGAIN            =    Play again?
 LABEL_RUSH_TIME             =    Choose Rush time
 LABEL_SAVE_REPLAY           =    Save replay?
-LOAD_DESC                   =    LIST OF GAMES THAT YOU HAVEN'T FINISH YET
+LOAD_DESC                   =    LIST OF GAMES THAT YOU HAVEN'T FINISHED YET
 LOAD_FAILED_TITLE           =    Load failed :(
 LOAD_MENU_TITLE             =    Saves
 LOAD_SHORTCUT               =    L
@@ -61,9 +62,10 @@ LOAD_TITLE                  =    Load
 MAIN_MENU_DESC              =    RETURNS TO MAIN MENU
 MAIN_MENU_SHORTCUT          =    M
 MAIN_MENU_TITLE             =    Main menu
-MAX_NAME_LENGTH_NOTICE      =    User name must be less than
+MAX_NAME_LENGTH_NOTICE      =    Username's length must be less than
+MOVE_SHORTCUT               =    W, A, S, D
 NAMING_FIELD_TITLE          =    Name
-NAVIGATE_BACK_KEY_SHORTCUT  =    b
+NAVIGATE_BACK_KEY_SHORTCUT  =    ESC
 NAVIGATE_BACK_KEY_TITLE     =    Go back
 NAVIGATION_KEYS_TITLE       =    Move
 NEW_GAME_DESC               =    CREATE A NEW GAME
@@ -88,7 +90,12 @@ OPTION_TYPE_RUSH            =    Rush
 OPTION_YES                  =    Yes
 OVERWRITE_NOTICE_TITLE      =    Do you want to overwrite that file?
 PAUSE_SHORTCUT              =    ESC
+PAUSE_SHORTCUT              =    ESC
 PAUSE_TITLE                 =    Pause
+PAUSE_TITLE                 =    Pause
+PLACE_SHORTCUT              =    Enter
+PLACE_TITLE                 =    Make move
+PLAYER_TIME                 =    Player's time
 PLAYER_TIME                 =    Player's time
 REPLAY_DESC                 =    FULL MATCH REPLAY
 REPLAY_LOAD_MENU_TITLE      =    Replays
@@ -109,21 +116,14 @@ SETTINGS_SHORTCUT           =    S
 SETTINGS_TITLE              =    Settings
 SOUND_EFFECT_TITLE          =    Sound effect
 SPACE_KEY_CONTINUE          =    Press SPACE to continue...
+SPACE_KEY_CONTINUE          =    Press SPACE to continue...
 STRING_INPUT_DONE_LABEL     =    Done
+TIME_OUT                    =    Over!
 TIME_OUT                    =    Over!
 TUTORIAL_DESC               =    IN-GAME INSTRUCTIONS.
 TUTORIAL_Q                  =    Do you want a quick tutorial?
 TUTORIAL_SHORTCUT           =    T
 TUTORIAL_TITLE              =    Tutorial
-UNDO_SHORTCUT				=	 Z
 UNDO_OPTION_TITLE           =    Undo
+UNDO_SHORTCUT               =    Z
 YES_TITLE                   =    Yes
-TIME_OUT					=	 Over!
-SPACE_KEY_CONTINUE			=    Press SPACE to continue...
-ANY_KEY_CONTINUE			=	 Press any key to continue...
-PLAYER_TIME					=	 Player's time
-PAUSE_SHORTCUT				=	ESC
-PAUSE_TITLE					=	Pause
-MOVE_SHORTCUT				=	W, A, S, D
-PLACE_SHORTCUT				=	Enter
-PLACE_TITLE					=	Make move
