--- a/CaroGame/asset/language/vi.txt
+++ b/CaroGame/asset/language/vi.txt
@@ -1,10 +1,10 @@
 [LANGUAGE]                  =    Tiếng Việt
-[LANG_SELECT]               =    Ngôn Ngữ
+[LANG_SELECT]               =    Ngôn ngữ
 ABOUT_DESC                  =    Danh sách nhóm và link mã nguồn
-ABOUT_SHORTCUT              =    n
+ABOUT_SHORTCUT              =    T
 ABOUT_TITLE                 =    Thông tin
 ABOUT_US_TITLE              =    Thông tin
-ANY_KEY_CONTINUE            =    Nhấn nút bất kì để tiếp tục...
+ANY_KEY_CONTINUE            =    Nhấn phím bất kì để tiếp tục...
 APPLY_FAILED                =    Áp dụng không thành công
 APPLY_KEY_TITLE             =    Áp dụng
 APPLY_SUCCESSFULLY          =    Áp dụng thành công
@@ -12,7 +12,7 @@ BACK_TITLE                  =    Quay lại
 BG_MUSIC_TITLE              =    Nhạc nền
 CUR_DIFFICULTY              =    Độ khó
 CUR_GAME_MODE               =    Chế độ
-CUR_GAME_TYPE               =    Loại
+CUR_GAME_TYPE               =    Thể loại
 CUR_MOVE_COUNT              =    Nước đi
 CUR_NAME                    =    Tên
 CUR_SCORE                   =    Điểm
@@ -20,50 +20,50 @@ CUR_TIME                    =    Thời gian
 DELETE_KEY_TITLE            =    Xóa
 EMPTY_SAVE_DESC             =    Chưa có bất kỳ bản lưu nào
 ENABLE_MUSIC_Q              =    Cho phép bật nhạc?
-ENABLE_SOUND_EFFECT_Q       =    Cho phép bật hiệu ứng âm thanh?
+ENABLE_SOUND_EFFECT_Q       =    Cho phép hiệu ứng âm thanh
 EXIT_CONFIRM_TITLE          =    Bạn có muốn thoát khỏi trò chơi?
 EXIT_DESC                   =    Thoát khỏi trò chơi
-EXIT_SHORTCUT               =    o
+EXIT_SHORTCUT               =    T
 EXIT_TITLE                  =    Thoát
 GROUP_TITLE                 =    Nhóm
-HELP_1_TITLE                =    Đây là phần hướng dẫn. Bạn sẽ học cách điều hướng trong trò chơi và một số tính năng cơ bản của trò chơi. Hy vọng là bạn sẽ thích nó! Bấm phím bất kỳ để tiếp tục.
-HELP_2_TITLE                =    Sẽ luôn luôn là một số gợi ý như thế này. Nếu bạn không biết phải làm gì, hãy tìm mục này ở cuối màn hình. Nó sẽ luôn ở đó cho bạn.
+HELP_1_TITLE                =    Đây là phần hướng dẫn. Bạn sẽ học cách điều hướng trong trò chơi và một số tính năng cơ bản của trò chơi. Hy vọng là bạn sẽ thích nó! Ấn phím bất kỳ để tiếp tục.
+HELP_2_TITLE                =    Mọi màn hình đều sẽ có những mục hướng dẫn như thế này. Nếu bạn không biết phải làm gì, hãy tìm những mục này ở cuối màn hình. Chúng sẽ luôn ở đó giúp đỡ bạn.
 HELP_3-1_TITLE              =    Ấn Quay lại để tiếp tục
-HELP_3_TITLE                =    Vô tình bật nhạc? Đây là nơi bạn có thể tắt chúng đi. Nhưng đừng vội, những bản nhạc này đã được lựa chọn rất cẩn thận để giúp bạn vơi đi nỗi buồn.
-HELP_4-1_TITLE              =    Tăng tốc trí óc của bạn với chế độ tính thời gian. Có ba tùy chọn có sẵn: 1, 5 và 15 phút.
-HELP_4-2_TITLE              =    Hoặc chỉ gắn bó với chế độ bình thường cổ điển cũ mà tất cả chúng ta đều yêu thích <3
-HELP_4_TITLE                =    Đây là menu. Bạn sẽ tương tác với rất nhiều thứ trong số đó trong suốt trò chơi. Nhấn Lên/Xuống hoặc W/S để điều hướng qua các tùy chọn hoặc bạn có thể nhấn ký tự gạch chân của tùy chọn để chọn trực tiếp các tùy chọn đó
-HELP_5_TITLE                =    Đây là một hộp văn bản. Bạn có thể gõ vào đó. Hãy thử điền vào ✨tên đẹp đẽ✨ của bạn
-HELP_6-1_TITLE              =    Bây giờ chọn sở thích của bạn, Chúng sẽ không cắn đâu.
-HELP_6_TITLE                =    Bất ngờ chưa! Chúng tôi biết bạn yêu thích những sinh vật nhỏ dễ thương này, nên chúng tôi đã mang chúng đến. Tốn sức lắm nha
+HELP_3_TITLE                =    Vô tình bật nhạc? Đây là nơi bạn có thể tắt nó đi. Nhưng đừng vội làm thế, những bản nhạc này đã được lựa chọn rất cẩn thận để giúp cải thiện trải nghiệm cuộc chơi của bạn.
+HELP_4-1_TITLE              =    Tăng tốc trí óc của bạn với chế độ Tốc độ. Có ba tùy chọn có sẵn: 1, 5 và 15 phút.
+HELP_4-2_TITLE              =    Hoặc thư giãn hơn chế độ Bình thường kinh điển mà tất cả chúng ta đều yêu thích <3
+HELP_4_TITLE                =    Đây là một màn hình menu. Bạn sẽ tương tác với chúng khá nhiều xuyên suốt trò chơi. Nhấn Lên/Xuống hoặc W/S để điều hướng qua các tùy chọn, hoặc bạn có thể nhấn ký tự gạch chân của một tùy chọn để chọn trực tiếp tùy chọn đó
+HELP_5_TITLE                =    Đây là một hộp văn bản. Bạn có thể gõ vào đây. Hãy thử điền vào ✨cái tên đẹp đẽ✨ của bạn
+HELP_6-1_TITLE              =    Giờ thì hãy chọn nhân vật bạn yêu thích, đừng lo chúng sẽ không cắn đâu.
+HELP_6_TITLE                =    Bất ngờ chưa! Chúng tôi biết bạn yêu thích những sinh vật nhỏ dễ thương này, nên chúng tôi đã mang chúng vào đây. Để làm được việc này, chúng tôi đã phải tốn rất nhiều công sức, nhưng cuối cùng thì tất cả đều rất thỏa đáng.
 HELP_7-1_TITLE              =    Đây là màn hình chính của trò chơi
-HELP_7-2_TITLE              =    Trò chơi ghi lại các nước đi, trong trường hợp bạn thân của bạn đang cố gian lận
-HELP_7-3_TITLE              =    Trạng thái trò chơi hiển thị thời gian bạn đã chơi ở chế độ bình thường hoặc thời gian đã trôi qua ở chế độ tính thời gian và số lượng trận thắng của bạn. Phần bên dưới hiển thị pokemon đã chọn trước đó của bạn, tên và lượt của bạn.
-HELP_8-1_TITLE              =    Bàn cờ là nơi trò chơi diễn ra. Nước đi cuối cùng được làm nổi bật để làm bạn dễ nhìn thấy. Bạn chỉ có thể quân cờ của mình vào một khoảng trống trong khung lưới của bàn cờ.
-HELP_8-2_TITLE              =    Người chơi đầu tiên tạo được một đường không bị gián đoạn gồm 5 quân cờ cùng màu của họ sẽ là người thắng cuộc. Vì vậy hãy cẩn thận nếu đối thủ của bạn đánh dấu
-HELP_8-3_TITLE              =    Xs thì màu đỏ, Os thì màu xanh.
-HELP_8-4_TITLE              =    Trò chơi này rất tuyệt và bạn cũng thế
-HELP_8-5_TITLE              =    Đó là tất cả những điều mà bạn cần biết. Hãy tận hưởng trò chơi!
+HELP_7-2_TITLE              =    Tất cả nước đi của người chơi đều được ghi lại, để phòng hờ trường hợp người bạn của bạn đang tìm cách gian lận.
+HELP_7-3_TITLE              =    Khung trạng thái trò chơi hiển thị khoảng thời gian đã trôi quan của từng người chơi ở chế độ Bình thường, hoặc khoảng thời gian còn lại của bọn họ ở chế độ Tốc độ. Ngoài ra, khung cũng cho thấy số trận thắng của từng người chơi kể từ trận đấu đầu tiên. Bên dưới khung trạng thái là khung hiển thị avatar mà người chơi đã chọn, tên của người chơi và lượt của người chơi hiện tại.
+HELP_8-1_TITLE              =    Bàn cờ là nơi trò chơi diễn ra. Nước đi cuối cùng đã được làm nổi bật để giúp bạn dễ nhận ra. Bạn chỉ có thể thực hiện nước đi của mình trên những ô trống của bàn cờ.
+HELP_8-2_TITLE              =    Người chơi đầu tiên tạo được một đường không bị gián đoạn gồm 5 quân cờ cùng màu của họ sẽ là người thắng cuộc. Vì vậy hãy cẩn thận nếu đối thủ của bạn có bốn quân liền kề nhau.
+HELP_8-3_TITLE              =    X màu đỏ, O màu xanh.
+HELP_8-4_TITLE              =    Người thắng trò chơi có quyền được chảnh.
+HELP_8-5_TITLE              =    Đó là tất cả những điều mà bạn cần biết. Bây giờ chúng ta hãy cùng bắt đầu trò chơi!
 INSTRUCTOR_TITLE            =    Giảng viên hướng dẫn
 LABEL_AI_DIFFICULTY         =    Chọn độ khó
 LABEL_GAME_MODE             =    Chọn chế độ chơi
-LABEL_GAME_TYPE             =    Chọn loại trò chơi
+LABEL_GAME_TYPE             =    Chọn thể loại trò chơi
 LABEL_PLAYER_NAME_ONE       =    Tên người chơi 1
 LABEL_PLAYER_NAME_TWO       =    Tên người chơi 2
-LABEL_PLAY_AGAIN            =    Chơi lại?
+LABEL_PLAY_AGAIN            =    Tiếp tục chơi?
 LABEL_RUSH_TIME             =    Chọn thời gian
-LABEL_SAVE_REPLAY           =    Lưu phát lại?
-LOAD_DESC                   =    Lịch sử các trò chơi chưa được hoàn thành
+LABEL_SAVE_REPLAY           =    Lưu bản phát lại?
+LOAD_DESC                   =    Lịch sử các trò chơi chưa kết thúc
 LOAD_FAILED_TITLE           =    Tải không thành công :(
-LOAD_MENU_TITLE             =    Lịch sử trò chơi
+LOAD_MENU_TITLE             =    Ván đấu đã lưu
 LOAD_SHORTCUT               =    L
-LOAD_TITLE                  =    Load
+LOAD_TITLE                  =    Hiện ván đấu đã lưu
 MAIN_MENU_DESC              =    Quay lại menu chính
 MAIN_MENU_SHORTCUT          =    M
 MAIN_MENU_TITLE             =    Menu chính
-MAX_NAME_LENGTH_NOTICE      =    Tên người dùng phải ít hơn
+MAX_NAME_LENGTH_NOTICE      =    Số kí tự tối đa của tên người dùng là 
 NAMING_FIELD_TITLE          =    Tên
-NAVIGATE_BACK_KEY_SHORTCUT  =    Q
+NAVIGATE_BACK_KEY_SHORTCUT  =    ESC
 NAVIGATE_BACK_KEY_TITLE     =    Quay lại
 NAVIGATION_KEYS_TITLE       =    Di chuyển
 NEW_GAME_DESC               =    Tạo trò chơi mới
@@ -101,19 +101,19 @@ SAVE_MENU_TITLE             =    Lưu
 SAVE_SHORTCUT               =    L
 SAVE_SUCCESS_TITLE          =    Lưu thành công
 SAVE_TITLE                  =    Lưu
+SEARCH_FIELD_TITLE          =    Tìm
 SEARCH_KEY_TITLE            =    Tìm
-SEARCH_FIELD_TITLE            =    Tìm
 SELECT_AVATAR_TITLE         =    Lựa chọn hình đại diện của bạn
 SELECT_KEY_TITLE            =    Lựa chọn
 SETTINGS_DESC               =    Thay đổi cài đặt game
 SETTINGS_SHORTCUT           =    C
 SETTINGS_TITLE              =    Cài đặt
 SOUND_EFFECT_TITLE          =    Hiệu ứng âm thanh
-SPACE_KEY_CONTINUE          =    Nhấn cách để tiếp tục...
-STRING_INPUT_DONE_LABEL     =    Hoàn thành
+SPACE_KEY_CONTINUE          =    Nhấn SPACE để tiếp tục...
+STRING_INPUT_DONE_LABEL     =    Xong!
 TIME_OUT                    =    Xong!
 TUTORIAL_DESC               =    Hướng dẫn chơi.
-TUTORIAL_Q                  =    Hướng dẫn?
+TUTORIAL_Q                  =    Bạn có muốn xem qua hướng dẫn của trò chơi?
 TUTORIAL_SHORTCUT           =    H
 TUTORIAL_TITLE              =    Hướng dẫn
 UNDO_OPTION_TITLE           =    Hoàn tác
